--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,16 @@
 }
 
 body {
+    margin: 0;
+}
+
+body {
     font-family: 'Open Sans', sans-serif;
     font-size: 18px;
 }   
 h1 {
   color:rgb(87, 85, 85);
+  margin-top: 30px;
 }
 h2 {
   color:rgb(87, 85, 85);
@@ -16,7 +21,6 @@ h3 {
   color:rgb(87, 85, 85);
 }
 p {
-    padding: 40px;
     padding-top: 15px;
     font-weight: 400;
     color:rgb(87, 85, 85);
@@ -38,17 +42,18 @@ footer {
     text-align: center;
     font-weight: bold;
 }
-.nav-link {
+
+.main-nav li {
     padding: 10px;
     margin-bottom: 5px;
     margin-left: auto;
     margin-right: auto;
     background-color: white;
     text-transform: uppercase;
-    display: block;
     font-weight: bold;
     width: 90%;
 }
+
 
 .container ,
 img {
@@ -75,6 +80,7 @@ img {
 }
 .portfolio {
     padding: 10px;
+    margin-top: 10px;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 12px;
@@ -89,7 +95,7 @@ img {
 }
 strong {
     display: inline;
-    padding-left: 1.25em;
+    padding-left: 5px;
     font-weight: bold;
     margin-top: 1.2em;
 }
@@ -111,32 +117,32 @@ strong {
 }
 
     /*------ Media Queries------*/
-    @media (min-width: 768px) {
-        
-        
+    @media (min-width: 768px) {       
     .main-nav .name {
         margin: 30px 0 10px;
         }
-    .nav-link, .main-nav  {
-        display: flex;
-        flex-direction: row;
-        background-color: inherit;
-        padding-left: 5px;      
-    }
 
     .name ,
     .portfolio ,
-    .nav-link ,
-    .main-nav ,
-    .container
-        {
+    .container {
         justify-content: center;
-            
-        }
-
-    .nav-link {
-        display: inline-flex;
+        margin: auto;
+    }
+    .name {
+        display: flex;
+        align-items: center;
+        margin: auto;
+    }
     
+    .main-nav {
+        display: flex;
+        align-items: center;
+        width: 50%;
+        margin: auto;
+    }
+    .main-nav li {
+    background-color: inherit;
+   
     }
 
     .profile {
@@ -187,12 +193,13 @@ strong {
     .footer-ul li , 
     .strong {
         display: inline;
-        padding-left: 1.25em;
+
         font-weight: bold;
     }
     .footer-ul {
         text-transform: uppercase;
     }
+   
 }
 
 @media (min-width: 1024px) {
@@ -201,11 +208,22 @@ strong {
          margin: 0 auto;
          
      }
-    .nav-header {
-        display: flex;
-        flex-direction: row;
+    .main-header :not(header) {
+        display: inline-block;
         justify-content: space-between;
-        padding: 1em 1.25em 0 1.25em;
+        padding: 3px;
+    }
+    li {
+        margin: auto;
+        
+    }
+    .main-nav li {
+        display: inline-block;
+        width: 20vh;
+        text-align: center;
+        margin: auto;
+      
+    
     }
    .profile p {
        text-align: left;
@@ -214,6 +232,6 @@ strong {
        width: 33%;
    }
    .name {
-    margin-left: 3.125em;  
+    margin-left: auto;  
    }      
 }
