--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,17 @@ h3 {
   color:rgb(87, 85, 85);
 }
 p {
-
     padding-top: 15px;
+    padding-bottom: 15px;
     font-weight: 400;
     color:rgb(87, 85, 85);
     text-align: center;
+    
+    margin: auto;
 }
 a {
     text-decoration: none;
     color: rgb(52, 50, 50);
-
-
 }
 .main-header ,
 footer {
@@ -60,6 +60,7 @@ footer {
 img {
     width: 90%;
     margin: 0 auto;
+    margin-top: 15px;
     text-align: center;
     padding-bottom: 5px;
 }
@@ -91,26 +92,27 @@ img {
     text-align: center;
     padding: 10px;
 }
-.phone, .email {
+.phone, 
+.email {
     font-weight: bold;
 }
 strong {
     display: inline;
     padding-left: 5px;
     font-weight: bold;
-    margin-top: 1.2em;
+    
 }
 .top {
     list-style-type: none;
     text-transform: uppercase;
     font-weight: bold;
-    margin-top: 1.2em;
+    
 }
 
 .footer-ul {
     display: none;
 }
-.footer-nav {
+nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -121,7 +123,7 @@ strong {
     @media (min-width: 768px) {       
     .main-nav .name {
         margin: 30px 0 10px;
-        }
+    }
 
     .name ,
     .portfolio ,
@@ -129,12 +131,7 @@ strong {
         justify-content: center;
         margin: auto;
     }
-    .name {
-        display: flex;
-        align-items: center;
-        margin: auto;
-    }
-    
+  
     .main-nav {
         display: flex;
         align-items: center;
@@ -167,11 +164,12 @@ strong {
         padding: 0;
     }
     .unit {
-        width: 40%;
+        width: 50%;
     }
     .container {
         display: flex;
         flex-wrap: wrap;
+       
     
     }
     .container .unit p {
@@ -186,6 +184,7 @@ strong {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+
 
     }
     .footer-ul {
@@ -209,30 +208,38 @@ strong {
          margin: 0 auto;
          
      }
-    .main-header :not(header) {
-        display: inline-block;
-        justify-content: space-between;
-        padding: 3px;
+    .navbar {
+        display: flex;
+        align-items: center;
+        
     }
+
+    .main-nav {
+        display: flex;
+        justify-content: space-between;
+        margin: 0 auto;
+        margin-right: 15px;
+        padding: 0;
+        width:  30%;
+    }
+
+    .main-nav li {
+        padding: 0px;
+        margin: 0px;
+    }
+    
     li {
         margin: auto;
         
     }
-    .main-nav li {
-        display: inline-block;
-        width: 20vh;
-        text-align: center;
-        margin: auto;
-      
-    
-    }
-   .profile p {
+   
+    .profile p {
        text-align: left;
    }
    .container .unit {
        width: 33%;
    }
    .name {
-    margin-left: auto;  
+    margin-left: 22px;
    }      
 }
